Textos de la página principal de la API

--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,12 @@
         <div class=" header-text">
             <p class="header-tagline">API Proyecto SPC</p>
             <h1 class="header-name green-gradient">Proyecto SPC</h1>
-            <p class="header-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-                optio expedita nam repellendus voluptatibus facere dignissimos voluptatem nemo quam.
-                Perspiciatis voluptatibus deserunt quo itaque nobis sunt error, eum rem est.</p>
+            <p class="header-description">
+                Te presentamos la API REST del Sistema de Productividad para el Campo
+                en la cual podrás encontrar cada uno de los servicios que utiliza la plataforma para
+                algunas de sus funcionalidades primordiales, como por ejemplo notificaciones,
+                solicitudes de pedidos, analítica, entre otras...
+            </p>
             <div class="documentation">
                 <a href="/api-docs">VER DOCUMENTACIÓN</a>
             </div>
@@ -41,23 +44,26 @@
         <div class="icon">
             <img src="./images/circle-check-solid.svg" alt="Secure notifications">
             <h3>Notificación de pedidos</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut doloribus saepe sit distinctio quidem,
-                corrupti nisi. Autem maxime dignissimos cum, suscipit iusto beatae eligendi, consectetur minima quam
-                nemo atque sit.</p>
+            <p>Contamos con una funcionalidad que le permite a la plataforma realizar envío de notificaciones
+                principalmente a través del navegador elegido por el usuario como también a través del correo electrónico.
+            </p>
         </div>
         <div class="icon">
             <img src="./images/tractor-solid.svg" alt="Tractor">
             <h3>Dirigido al campo</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut doloribus saepe sit distinctio quidem,
-                corrupti nisi. Autem maxime dignissimos cum, suscipit iusto beatae eligendi, consectetur minima quam
-                nemo atque sit.</p>
+            <p>
+                Trabajamos con el fin de enlazar de manera innovadora a productores agrícolas, campesinos y finqueros,
+                directamente con mayoristas, distribuidores, tenderos y consumidores en general.
+            </p>
         </div>
         <div class="icon">
             <img src="./images/chart-simple-solid.svg" alt="Analytics">
             <h3>Analíticas</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut doloribus saepe sit distinctio quidem,
-                corrupti nisi. Autem maxime dignissimos cum, suscipit iusto beatae eligendi, consectetur minima quam
-                nemo atque sit.</p>
+            <p>
+                Por medio de los resultados obtenidos a partir de la interacción entre los usuarios de la plataforma,
+                generamos analíticas que son presentados por medio de gráficos estadísticos dentro del perfil de Administrador
+                General.
+            </p>
         </div>
     </div>
 </section>
@@ -68,9 +74,12 @@
     <div class="container about-spc-grid">
         <div class="about-spc-text">
             <h2>Sobre <span>SPC</span></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum sequi fugit voluptatum quidem odit
-                doloremque, fuga vero tempora ad magnam sit impedit iure odio dolore. Perferendis neque impedit aut
-                reprehenderit.</p>
+            <p>
+                En el comercio agrícola no existe una comunicación estable entre productores y consumidores, solo
+                se genera un encuentro ellos cuando se realizan ferias a nivel municipal, departamental o nacional.
+                Es por ello que se crea la plataforma web SPC con el fin de establecer una comunicación activa entre estos
+                dos actores, permitiendo a los productores ofrecer sus productos a un precio justo para los consumidores.
+            </p>
             <div class="btn-to-spc">
                 <a target="_blank" href="https://bdproyectospc.web.app">Ir a SPC</a>
             </div>
